# scaffix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  semantic-release.yml
docs/: PROJECT_GUIDE.md
src/scaffix/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
